--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <div class="container">
-      <img src="images/image-qr-code.png" alt="qr code" class="img" />
-      <div class="text-content">
-        <h1 class="heading">
-          Improve your front-end skills by building projects
-        </h1>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
+    <main>
+      <div class="container">
+        <img src="images/image-qr-code.png" alt="qr code" class="img" />
+        <div class="text-content">
+          <h1 class="heading">
+            Improve your front-end skills by building projects
+          </h1>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
